# pforprompt-usecases

./: .env.example  REDDIT_SETUP.md  main.py  md_test.ipynb  pyproject.toml  requirements_reddit.txt  sample_business_report.md  settings.py  setup_and_test.py  test_fixes.py  test_reddit_integration.py  test_report_saving.py  test_validation_fix.py
idea_potential/: README.md  SUGGESTER_AGENT_README.md  __init__.py  advanced_report_generator.py  base_agent.py  clarifier_agent.py  comprehensive_data_report_generator.py  comprehensive_report_generator.py  config.py  example.py  example_with_suggestions.py  generate_comprehensive_reports.py  pipeline.py  refiner_agent.py  report_agent.py  research_agent.py  roadmap_agent.py  structured_outputs.py  suggester_agent.py  test_suggester.py  test_system.py  validation_agent.py
idea_potential/reports/: aCommunityDrivenPlatformDesignedForDevelopersAndDa_020825_1559.md  aCommunityDrivenPlatformDesignedForDevelopersAndMa_020825_1530.md  aCommunityDrivenPlatformDesignedForSoftwareDevelop_020825_1505.md  idea_analysis_results_20250802_124233.json  (+14 more)
idea_refinement_engine/: COMPREHENSIVE_REPORT_GUIDE.md  README.md  REPORT_ANALYSIS_AND_IMPROVEMENTS.md  REPORT_COMPARISON.md  __init__.py  base_agent.py  brainstormer_agent.py  clarification_suggester_agent.py  clarifier_agent.py  critic_agent.py  example.py  example_comprehensive_report.py  main.py  pipeline.py  questioner_agent.py  reality_miner_agent.py  report_generator.py  state.py  synthesizer_agent.py  test_report_generator.py
reddit_prompt_problem_finder_and_solver/: finder.py
(+6 files in other folders)
